--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: "Ruthie", cursive;
+  font-style: oblique;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
+
+  /* Set background image */
+  background-image: url("./images/sushi-background-original.jpg");
+  position: fixed;
+  min-width: 100%;
+  max-width: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+h1 {
+  font-size: 50px;
+  color: rgb(209, 207, 207);
+  font-weight: 400;
+  text-align: center;
+  -webkit-text-fill-color: white; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: rgb(59, 59, 59);
+  line-height: 4rem;
+}
+
+.topPart {
+  background-image: url("./images/sushi_logo_white_transparent.png");
+  background-repeat: no-repeat;
+  background-size: 350px 120px;
+  /* background-size: cover; */
+  background-position: center;
+  display: flex;
+  flex: 1;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.middlePart {
+  display: flex;
+  width: 100%;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.bottomPart {
+  flex: 1;
+}
+
+@media screen and (min-width: 500px) {
+  h1 {
+    font-size: 70px;
   }
-  to {
-    transform: rotate(360deg);
+  .header_container {
+    max-height: 50%;
+  }
+  .topPart {
+    background-size: 600px 200px;
   }
 }
